--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,10 @@
 server {
-	location {
+	listen 80;
+	location ^~ /uploads/ {
+		root /home/box/web;
+	}
+	location ~* .*\..+ {
+		alias /home/box/web/public;
 	}
 }
 
