--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,10 +1,11 @@
 server {
 	listen 80;
+	error_log /home/jack/stepik/repo/nginx_err_log;
 	location ^~ /uploads/ {
-		root /home/box/web;
+		root /home/jack/stepik/repo/web;
 	}
 	location ~* .*\..+ {
-		alias /home/box/web/public;
+		alias /home/jack/stepik/repo/web/public;
 	}
 }
 
