--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,11 +1,10 @@
 server {
 	listen 80;
-	error_log /home/jack/stepik/repo/nginx_err_log;
 	location ^~ /uploads/ {
-		root /home/jack/stepik/repo/web;
+		root /home/box/web;
 	}
-	location ~* .*\..+ {
-		alias /home/jack/stepik/repo/web/public;
+	location ~* ^.+\..+$ {
+		root /home/box/web/public;
 	}
 }
 
