--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,10 +1,13 @@
 server {
-	listen 80;
-	location ^~ /uploads/ {
-		root /home/box/web;
-	}
-	location ~* ^.+\..+$ {
-		root /home/box/web/public;
+#	listen 80;
+#	location ^~ /uploads/ {
+#		root /home/andrtem/stepik/repo/web;
+#	}
+#	location ~* ^.+\..+$ {
+#		root /home/andrtem/stepik/repo/web/public;
+#	}
+	location /hello/ {
+		proxy_pass http://127.0.0.1:8080;
 	}
 }
 
