--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,11 +6,12 @@ server {
 #	location ~* ^.+\..+$ {
 #		root /home/andrtem/stepik/repo/web/public;
 #	}
-	location ~^ /hello/ {
+	location ^~ /hello/ {
 		proxy_pass http://127.0.0.1:8080;
 	}
 	location / {
 		proxy_pass http://127.0.0.1:8000;
 	}
+}
 
 
