--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -6,12 +6,7 @@ server {
 #	location ~* ^.+\..+$ {
 #		root /home/andrtem/stepik/repo/web/public;
 #	}
-	location ^~ /hello/ {
+	location /hello/ {
 		proxy_pass http://127.0.0.1:8080;
 	}
-	location / {
-		proxy_pass http://127.0.0.1:8000;
-	}
 }
-
-
